.jekyll-cache/Jekyll/Cache/Jekyll--Converters--Markdown/cf/5049c6082a6609b1a2b4a4ae721d26c0c164c160ec7b1a0d3b8d21c9ad0605
I"Ô<console>:14: error: not found: value spark
       import spark.implicits._
              ^
<console>:14: error: not found: value spark
       import spark.sql
              ^
              
scala&gt;  var rdd = sc.parallelize(1 to 10)
<console>:39: error: not found: value sc
        var rdd = sc.parallelize(1 to 10)
        
        
æ—¥å¿—ï¼š
Caused by: java.lang.RuntimeException: java.net.ConnectException: Call From localhost/127.0.0.1 to localhost:8020 failed on connection exception: java.net.ConnectException: Connection refused; For more details see:  http://wiki.apache.org/hadoop/ConnectionRefused

hadoopæ²¡æœ‰å¯åŠ¨
å¯åŠ¨hadoop

Using Scala version 2.11.8 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_144)
Type in expressions to have them evaluated.
Type :help for more information.

scala&gt; var rdd = sc.parallelize(1 to 10)
rdd: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[0] at parallelize at <console>:24
</console></console></console></console>
:ET